--- a/.env
+++ b/.env
@@ -13,7 +13,7 @@ WHATSAPP_ACCESS_TOKEN=seu_token_facebook
 WHATSAPP_PHONE_ID=seu_phone_id
 
 # Provider ativo: 'ultramsg' | 'meta' | 'dev'
-WA_PROVIDER=meta
+WA_PROVIDER=ultramsg
 
 # Variáveis usadas pelo `server.js` para o WhatsApp Cloud API (Meta)
 # Copie aqui os valores gerados no Facebook for Developers
