Atualiza números reais dos setores no .env

--- a/.env
+++ b/.env
@@ -1,7 +1,27 @@
+# UltraMsg por setor (preencha com os dados de cada instância)
+ULTRAMSG_INSTANCE_TI=instance_xxx
+ULTRAMSG_TOKEN_TI=token_xxx
+ULTRAMSG_INSTANCE_FISCAL=instance_xxx
+ULTRAMSG_TOKEN_FISCAL=token_xxx
+ULTRAMSG_INSTANCE_FINANCEIRO=instance_xxx
+ULTRAMSG_TOKEN_FINANCEIRO=token_xxx
+ULTRAMSG_INSTANCE_COMERCIAL=instance_xxx
+ULTRAMSG_TOKEN_COMERCIAL=token_xxx
+ULTRAMSG_INSTANCE_LOGISTICA=instance_xxx
+ULTRAMSG_TOKEN_LOGISTICA=token_xxx
+ULTRAMSG_INSTANCE_COMPRAS=instance_xxx
+ULTRAMSG_TOKEN_COMPRAS=token_xxx
 # Configurações do WhatsApp para Pyramid Diamantados
 # Número da TI da Pyramid configurado
 
-WHATSAPP_TI=5511993225739
+
+# Números de WhatsApp por setor
+WHATSAPP_TI=5511943456846
+WHATSAPP_FISCAL=5511937575367
+WHATSAPP_FINANCEIRO=5511994797594
+WHATSAPP_COMERCIAL=5511988272404
+WHATSAPP_LOGISTICA=5511988272607
+WHATSAPP_COMPRAS=5511988272541
 
 # UltraMsg API (para envio direto no WhatsApp) - CREDENCIAIS CORRETAS
 ULTRAMSG_TOKEN=ynquqp53ffqmu94zggg
@@ -24,7 +44,7 @@ META_WA_PHONE_ID=seu_phone_id
 # Defina um valor forte antes de usar em rede pública
 TEST_ENDPOINT_KEY=seu_token_de_teste_aqui
 
-# Exemplo de como configurar:
+# 3Exemplo de como configurar:
 # WHATSAPP_TI=5511987654321  (55 + 11 + 987654321)
 # 
 # Formato: País (55) + DDD + Número
