feat: adiciona grupo de vendedores ao setor COMERCIAL

--- a/.env
+++ b/.env
@@ -51,3 +51,4 @@ TEST_ENDPOINT_KEY=seu_token_de_teste_aqui
 # Rio: 5521XXXXXXXXX
 # 
 # Os chamados serão enviados via WhatsApp para este número
+WHATSAPP_GRUPO_COMERCIAL=120363047711559636@g.us
